f5_sphinx_theme/static/css/f5-theme.css
/* ... */
#sidebar.active {
    margin-left: -35%;
}

@media (max-width: 1024px) {
    #sidebar {
        margin-left: -75%;
    }
    #sidebar.active {
        margin-left: 0;
    }
}

@media (min-width: 1025px) {
  .site-hidden {
    display: none!important;
  }
}

@media (max-width: 1024px) {
  .site-hidden {
    display: block;
  }
}

form.search {
  padding-bottom: 6px;
  display: inline;
}

.search {
  /* margin: auto !important; */
  display: inline-table;
  width: auto !important;
}

#searchbox > form > button {
  margin: auto;
  padding: 0 4px;
  border-radius: 4px;
  display: inline-block;
}

#sidebar ul {
  margin: 3px 6px 6px -28px;
  list-style-type: none;
}

/* collapsible sidebar list items */
a[data-toggle="collapse"] {
    position: relative;
}

a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
    content: '\f146';
    display: block;
    position: absolute;
    right: 20px;
    font-family: 'FontAwesome';
    font-size: 0.6em;
}

a[aria-expanded="true"]::before {
    content: '\f0fe';
}


.site-nav-item {
    line-height: 16px;
    margin: 8px 0 0;
    position: relative;
}

.docs-wrapper {
  background: #212121;
  cursor: pointer;
  display: none;
  height: 100vh;
  opacity: .5;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10011;
}



.search .btn-primary {
  border-radius: 4px;
}

.navbar-btn {
  padding: 0 4px;
  border-radius: 4px;
  display: inline-block;
}

.search-wrapper {
  /* margin-right: 40px; */
  /* padding-right: 60px; */
  /* margin-left: initial; */
}

#search-results {
  /* margin-left: -20px; */
}

#search-results > h2,
#search-results > p {
  margin-left: 0;
}

#search-results > ul {
  display: block;
}
/*
 * Main content
 */

.main {
  padding: 20px;
}
/*
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}
*/


.site-article-inner {
    width: 95%;
    display: inline-grid;
}

.docs-container {
  margin-left: 25px;
  display: block;
}

.site-breadcrumb-nav {
  padding-top: 16px;
  display: inline;
}

ul.site-breadcrumb-list {
  margin: -2px;
  list-style-type: none;
}

.site-breadcrumb-list {
  padding: 0;
  word-wrap: break-word;
  word-break: break-all;
  font-size: 13px;
}


.site-breadcrumb-item {
    display: inline-block;
    margin: 0;
}

.sidebar {
  /*position: fixed;
  right: 0; */
  width: 35%;
  float: right;
  display: block;
  margin-left: 25px;
  background-color: #d4eaf6;
  padding: 10px;
  border-radius: 4px;
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
}


@media (max-width: 1024px) {
  .sidebar {
    width: 100%;
    display: inline-block;
    padding: 10px;
    margin-bottom: 20px;
  }
}

.sidebar>p,.sidebar>ul,.sidebar>li {
  font-size: 90%;
}

.sidebar>ul,.sidebar>li {
  margin: 11px;
  padding-left: 5px;
}

.sidebar-title {
  font-weight: bold;
  font-size: 100%;
}


/*
* Panels for Tip, See also, Note etc
*/

.admonition {
  border-radius: 4px;
  background-color: white;
  margin-bottom: 20px;
  margin-top: 10px;
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
}

div.sidebar ~ div.container.admonition {
  position: relative;
}

/* F5 Yellow: Caution */
.caution {
  border: 1px #FFF200 solid;
  background-color: #FFF;
}

.caution>.admonition-title {
  background-color: #FFF200;
  color: black;
  padding: 6px;
}

/* F5 Orange: Attention, Warning */
.attention, .warning {
  border: 1px #f66e41 solid;
  background-color: #FFF;
}

.attention>.admonition-title,
.warning>.admonition-title {
  background-color: #f66e41;
  color: white;
  padding: 6px;
}

/* F5 Red */
.danger, .error {
  border: 1px #e4002b solid;
  background-color: #FFF;
}

.danger>.admonition-title, .error>.admonition-title {
  background-color: #e4002b;
  color: white;
  padding: 6px;
}

/* Green */
.hint,
.admonition-tmsh {
  border: 1px #51af4a solid;
  background-color: #FFF;
}

.attention>.last {
  padding: 6px;
}

.hint>.admonition-title,
.admonition-tmsh>.admonition-title {
  background-color: #51af4a;
  color: white;
  padding: 6px;
}

/* F5 Purple */
.tip,
.note {
  border: 1px #8547AD solid;
  background-color: #FFF;
}

.tip>.admonition-title, .note>.admonition-title {
  background-color: #8547AD;
  color: white;
  padding: 6px;
}


/* F5 Blue */
.important,
.seealso {
  border: 1px #00A1E4 solid;
  background-color: #FFF;
}

.important>.admonition-title,
.seealso>.admonition-title {
  color: #fff;
  background-color: #00A1E4;
  padding: 6px;
}

.attention>.last,
.caution>.last,
.warning>.last,
.danger>.last,
.error>.last,
.hint>.last,
.tip>.last,
.note>.last,
.important>.last,
.seealso>.last {
  padding: 6px;
}

/* Admonition icons */

.admonition-title:before {
  font-family: "FontAwesome";
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  text-decoration: inherit;
  margin-left: 8px;
  margin-right: 8px;
}
.attention>.admonition-title:before,
.caution>.admonition-title:before,
.warning>.admonition-title:before {
  content: "\f06a";
}

.important>.admonition-title:before,
.admonition-tmsh>.admonition-title:before,
.note>.admonition-title:before,
.tip>.admonition-title:before,
.hint>.admonition-title:before {
  content: "\f05a";
}

.danger>.admonition-title:before,
.error>.admonition-title:before {
  content: "\f071";
}

.admonition-tmsh>.admonition-title:after {
  content: " Command";
}

.admonition-tmsh p.last,
.admonition-tmsh p {
    display: block;
    padding: 10.5px;
    margin: 6px 6px 11px;
    font-size: 15px;
    line-height: 1.375;
    word-break: break-all;
    word-wrap: break-word;
    color: #4d4f53;
    background-color: #f5f5f5;
    border: 1px solid #ccc;
    border-radius: 0;
    font-family: Menlo,Monaco,Consolas,Courier New,monospace;
}

.admonition-todo>.admonition-title:before {
  content: "\f046";
}

.admonition-todo>.admonition-title {
  background-color: #ff3030;
  color: white;
  padding: 6px;
}
/* ... */

